[package]
name = "lmcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
