[package]
name = "lmcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
rustyline = "15.0.0"
async-openai = "0.27.0"
pulldown-cmark = "0.13.0"
diffy = "0.4.2"
